--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -220,7 +220,7 @@ nav.menu {
   }
 
   &.menu-goods {
-    mix-blend-mode: unset !important;
+    // mix-blend-mode: unset !important;
   }
 
   &.menu-home {
@@ -250,7 +250,7 @@ nav.menu {
   }
 
   &.menu-list-page {
-    mix-blend-mode: unset !important;
+    // mix-blend-mode: unset !important;
 
     p,
     a {
