--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -67,6 +67,10 @@ body {
   text-rendering: optimizeLegibility;
 }
 
+main {
+  background: #fff;
+}
+
 h1,
 h2 {
   font-family: "Helvetica Neue Condensed", sans-serif;
